optimized searching functionality to make use of multiple words in the query, added border radius to product carts, implemented image compression for products photos and store profile photo, added type column to database to help with searching functionality and noticed bug when logged in as a store and trying to search something and search results div covers the search input field, but I didn't fix it yet

--- a/app/static/css/general.css
+++ b/app/static/css/general.css
@@ -97,10 +97,10 @@ textarea {
 }
 
 #search_results_div {
-    z-index: 900;
+    z-index: 600;
     width: 30.25vw;
     position: fixed;
-    margin: 0 0 0 34vw;
+    margin: -40px 0 0 34vw;
     display: none;
     flex-direction: column;
     background-color: var(--dark-blue);
